# api-endpoint-scanner

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pre-commit-config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
scanner/: cli.py  core.py
tests/: conftest.py  dummy_app.py  test_core.py
tests/outputs/: poetryTest_1_072325.txt
