[tool.poetry]
name        = "api-endpoint-scanner"
version     = "0.1.0"
description = ""
authors     = ["Samuel Ma <akathunder32@gmail.com>"]

# Tell Poetry which directory should be packaged
packages = [
  { include = "scanner" }
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.12"
rich   = "^14.0"
click  = "^8.2"



[tool.poetry.group.dev.dependencies]
black            = "^25.1"
isort            = "^6.0"
flake8           = "^7.3"
pytest           = "^8.4"
pytest-asyncio   = "^1.0"
mypy             = "^1.16"
pre-commit       = "^4.2"
fastapi          = "^0.111"
uvicorn          = { version = "^0.35.0", extras = ["standard"] }
httpx            = "^0.28"

[tool.flake8]
max-line-length = 88      # match Black
extend-ignore = ["E203"]  # Black’s default, safe to keep

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"